feat(polkadot-connector): add invoke contract function and testcase
